--- a/css/styles.css
+++ b/css/styles.css
@@ -39,3 +39,11 @@
     padding: 25px;
     padding-top: 40px;
 }
+
+#toDoExpanded {
+    display: none;
+    margin: 0 auto;
+    margin-top: 20px;
+    width: 600px;
+    background-color: #ffffff;
+}
