--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,13 @@
     padding: 50px;
 }
 
+.coloredBorderMain {
+    border-color: #4054B2;
+    border-style: solid;
+    border-width: 4px;
+    padding: 50px;
+}
+
 .regButton {
     margin-top: 10px;
 } 
