--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@
 }
 
 .coloredBorder {
-    border-color: #ff5252;
+    border-color: #4054B2;
     border-style: solid;
     border-width: 4px;
     padding: 50px;
