Checklists are now loaded into trips
- When a user opens a trip card, he/she is shown the information relevant to the trip, as well as the item list for each of the checklists chosen

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@
     padding-top: 40px;
 }
 
-#toDoExpanded, #toBringExpanded {
+#toDoExpanded, #toBringExpanded, #tripExpanded {
     display: none;
     margin: 0 auto;
     margin-top: 20px;
