--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@
 .card {
     padding: 25px;
     padding-top: 40px;
+    width: 320px;
 }
 
 #toDoExpanded, #toBringExpanded, #tripExpanded {
@@ -103,4 +104,8 @@
 
 .footer {
     margin-top: 30px;
+}
+
+#toDoChecklists {
+    margin: 0 auto;
 }
