--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <%= javascript_pack_tag 'navigation' %>
     <%= yield %>
+    <%= javascript_pack_tag 'footer' %>
   </body>
 </html>
