--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div className="mdl-grid">
     
     <div id="registration_form_container" className="mdl-cell mdl-cell--4-col-desktop mdl-cell--4-offset-desktop">
-      <%= javascript_pack_tag 'sign_in' %>
+      <%= javascript_pack_tag 'registration' %>
     </div>
     
   </div>
