- css for checklist form, detailed view and index - removing about us and contact page links and footer

--- a/app/views/checklists/view.html.erb
+++ b/app/views/checklists/view.html.erb
@@ -1,7 +1,7 @@
 <main className="mdl-layout__content">
   <div className="mdl-grid">
     
-    <div id="checklist_index_container" className="mdl-cell mdl-cell--4-col-desktop mdl-cell--4-offset-desktop">
+    <div id="checklist_index_container">
       <%= javascript_pack_tag 'checklists' %>
     </div>
     
