--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,8 +1,8 @@
 <main className="mdl-layout__content">
   <div className="mdl-grid">
     
-    <div id="registration_form_container" className="mdl-cell mdl-cell--4-col-desktop mdl-cell--4-offset-desktop">
-      <%= javascript_pack_tag 'registration' %>
+    <div id="user_form_container" className="mdl-cell mdl-cell--4-col-desktop mdl-cell--4-offset-desktop">
+      <%= javascript_pack_tag 'sign_up' %>
     </div>
     
   </div>
