--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,8 @@
   </head>
 
   <body>
-    <div id="bodiv" className="mdl-layout mdl-layout--no-desktop-drawer-button mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-tabs">
-      <%= javascript_pack_tag 'navigation' %>
-      
-      <%= yield %>
+    <div id="main_container">
+      <%= javascript_pack_tag 'application' %>
     </div>
   </body>
 </html>
