Added no checklists message

--- a/app/assets/stylesheets/checklists.scss
+++ b/app/assets/stylesheets/checklists.scss
@@ -107,3 +107,8 @@ $custom_red: #ff5252;
 .checklist-input__description, .checklist-input__description-label {
     text-align: center;
 }
+
+.empty_section {
+    color: gray;
+    text-align: center;
+}
